--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,21 +15,21 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 		</div>
 		<div
 			id="content"
-			class="flex-1 flex justify-center items-end pb-40 gap-12 text-3xl font-bold"
+			class="flex-1 flex justify-center items-end pb-40 gap-4 md:gap-12 text-3xl font-bold z-20"
 		>
 			<a
 				href="/projects"
-				class="duration-500 text-zinc-500 hover:text-neutral-100"
+				class="duration-500 text-white/50 hover:text-white/80 drop-shadow-[0_0_8px_rgba(255,255,255,0.5)]"
 				transition:name={"Projects"}>Projects</a
 			>
 			<a
 				href="/blog"
-				class="duration-500 text-zinc-500 hover:text-neutral-100"
+				class="duration-500 text-white/50 hover:text-white/80 drop-shadow-[0_0_8px_rgba(255,255,255,0.5)]"
 				transition:name={"Blog"}>Blog</a
 			>
 			<a
 				href="/contact"
-				class="duration-500 text-zinc-500 hover:text-neutral-100"
+				class="duration-500 text-white/50 hover:text-white/80 drop-shadow-[0_0_8px_rgba(255,255,255,0.5)]"
 				transition:name={"Contact"}>Contact</a
 			>
 		</div>
