--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -10,7 +10,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
 	<body
-		class="bg-gradient-to-tl from-black via-neutral-900 to-black bg-fixed"
+		class="bg-gradient-to-tl from-black via-neutral-900 to-black bg-fixed min-h-screen"
 	>
 		<Navigation />
 		<div class="relative pb-16">
