--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -18,7 +18,7 @@ const { title, description, image = "/og.png" } = Astro.props;
 
 <!-- Global Metadata -->
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="icon" type="image/svg+xml" href="/favicon.png" />
 <link rel="sitemap" href="/sitemap-index.xml" />
 <link
